--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.51"
 bstr = "0.2.17"
+serde_json = "1.0.73"
+fallible-iterator = "0.2.0"
+either = "1.6.1"
