--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ bstr = "0.2.17"
 serde_json = "1.0.73"
 fallible-iterator = "0.2.0"
 either = "1.6.1"
+
+[dev-dependencies]
+headcrab = {git = "https://github.com/FlyingCanoe/headcrab.git"}
+addr2line = {git = "https://github.com/FlyingCanoe/addr2line.git"}
+gimli = "0.25.0"
